# dosbox-staging-boxer

./: .gitignore  BOXER_UPGRADE_STRATEGY.md  DECISION_LOG.md  INTEGRATION_MAPPING.md  MIGRATION_GUIDE.md  MODIFICATIONS_STATUS.md  PARPORT_ANALYSIS.md  PREPARATION_AND_CLEANUP.md  PROGRESS.md  PUSH-INSTRUCTIONS.md  README.md  README_COMPILATION.md  README_UPGRADE_DOCS.md  VERIFICATION_GUIDE.md  config.h  phase-1-dosbox-changes.patch  phase-2-lifecycle-hooks.patch
analysis/00-orchestrator/: orchestrator-log.md
analysis/01-current-integration/: audio-midi-analysis.md  emulation-lifecycle-analysis.md  file-io-analysis.md
analysis/01-current-integration/integration-points/: INT-001-boxer_processEvents.md  INT-004-boxer_setMouseActive.md  INT-006-boxer_GetDisplayRefreshRate.md  INT-016-boxer_applyRenderingStrategy.md  INT-026-boxer_didReturnToShell.md  INT-028-boxer_shellWillReadCommandInputFromHandle.md  INT-029-boxer_shellDidReadCommandInputFromHandle.md  INT-031-boxer_hasPendingCommandsForShell.md  INT-035-boxer_shellDidExecuteFileAtDOSPath.md  INT-041-boxer_shouldAllowWriteAccessToPath.md  INT-050-boxer_removeLocalDir.md  INT-051-boxer_getLocalPathStats.md  INT-055-boxer_closeLocalDirectory.md  INT-060-boxer_setJoystickActive.md  INT-062-boxer_keyboardBufferRemaining.md  INT-065-boxer_keyboardLayoutSupported.md  INT-066-boxer_keyboardLayoutActive.md  INT-074-boxer_getNextKeyCodeInPasteBuffer.md  INT-077-boxer_PRINTER_readstatus.md  INT-080-boxer_PRINTER_isInited.md  INT-086-boxer_updateVolumes.md
boxer-upgrade/: PROGRESS.md  PUSH-INSTRUCTIONS.md  phase-2-lifecycle-hooks.patch
boxer-upgrade/analysis/00-orchestrator/: consolidated-strategy.md
boxer-upgrade/analysis/01-current-integration/integration-points/: INT-008-boxer_getRGBPaletteEntry.md  INT-014-boxer_MIDIAvailable.md  INT-032-boxer_executeNextPendingCommandForShell.md  INT-038-boxer_shellShouldContinue.md  INT-042-boxer_driveDidMount.md  INT-044-boxer_didCreateLocalFile.md  INT-063-boxer_keyboardLayoutLoaded.md  INT-073-boxer_numKeyCodesInPasteBuffer.md  INT-078-boxer_PRINTER_writecontrol.md  INT-082-boxer_sendMIDIMessage.md  INT-083-boxer_sendMIDISysex.md  INT-084-boxer_suggestMIDIHandler.md
boxer-upgrade/analysis/03-reintegration-analysis/: minimal-invasiveness-strategy.md
boxer-upgrade/instructions/: CLAUDE_REFERENCE.md  MASTER_ORCHESTRATOR.md  PHASE_COMPLETION_TEMPLATE.md
boxer-upgrade/instructions/phases/: PHASE_HEADER_TEMPLATE.md  phase-1-foundation.md  phase-2-lifecycle.md  phase-3-rendering.md  phase-4-shell.md  phase-5-io.md  phase-6-parport.md  phase-7-input-audio.md  phase-8-testing.md
boxer-upgrade/progress/phase-1/: OBJECTIVES.md
boxer-upgrade/progress/phase-1/tasks/: TASK-1-1.md  TASK-1-2.md  TASK-1-3.md  (+3 more)
boxer-upgrade/progress/phase-2/: OBJECTIVES.md  PATCH_VERIFICATION.md
boxer-upgrade/progress/phase-5/: OBJECTIVES.md
boxer-upgrade/progress/phase-6/: OBJECTIVES.md
boxer-upgrade/progress/phase-7/: OBJECTIVES.md
boxer-upgrade/progress/phase-8/: OBJECTIVES.md
boxer-upgrade/validation/: build-test.sh  static-checks.sh
boxer-upgrade/validation/lifecycle-test/: lifecycle-test.cpp
boxer-upgrade/validation/smoke-test/: README.md  main.cpp  standalone-test  standalone-test.cpp
docs/upgrade-analysis/00-orchestrator/: agent-manifest.md
docs/upgrade-analysis/01-current-integration/: PHASE-1A-REPORT.md  build-system-integration.md  graphics-modes-analysis.md  input-handling-analysis.md  integration-overview.md  rendering-pipeline-analysis.md  shell-integration-analysis.md
docs/upgrade-analysis/03-reintegration-analysis/: hooking-opportunities.md  unavoidable-modifications.md
docs/upgrade-analysis/04-special-cases/: parport-migration.md
include/: bios.h  dos_system.h  dosbox.h  ipx.h  ipxserver.h  joystick.h  keyboard.h  shell.h
instructions/: AGENT_TEMPLATES.md  CLAUDE_REFERENCE.md  MASTER_ORCHESTRATOR.md  PHASE_COMPLETION_TEMPLATE.md  VALIDATION_GATES.md
instructions/phases/: PHASE_HEADER_TEMPLATE.md  phase-1-foundation.md  phase-2-lifecycle.md  phase-3-rendering.md  phase-4-shell.md  phase-5-io.md  phase-6-parport.md  phase-7-input-audio.md  phase-8-testing.md
progress/phase-1/: OBJECTIVES.md  PHASE_COMPLETE.md
progress/phase-1/tasks/: TASK-1-1.md  TASK-1-2.md  TASK-1-3.md  TASK-1-4.md  TASK-1-5.md  TASK-1-6.md
progress/phase-2/: PATCH_VERIFICATION.md  PHASE_2_STATUS.md  PHASE_COMPLETE.md
progress/phase-2/tasks/: TASK-2-1-completion.txt  TASK-2-2.md  TASK-2-3.md  TASK-2-4.md
progress/phase-3/: BUILD_SUMMARY.md  COMPILATION_STATUS.md  INDEX.md  NEXT_STEPS.md  OBJECTIVES.md  PHASE_COMPLETE.md  RENDERING_ANALYSIS.md  TESTING_GUIDE.md  TESTING_GUIDE_AMENDMENTS.md  phase-3-2-frame-hooks.patch
progress/phase-3/tasks/: TASK-3-1.md  TASK-3-2.md  TASK-3-3.md  TASK-3-4.md  TASK-3-5.md  TASK-3-6.md
progress/phase-4/: OBJECTIVES.md
src/: dosbox.cpp
src/cpu/core_dyn_x86/: risc_x64.h
src/cpu/core_dynrec/: decoder.h
src/dos/: cdrom.h  cdrom_image.cpp  dev_con.h  dos.cpp  dos_devices.cpp  dos_execute.cpp  dos_keyboard_layout.cpp  dos_memory.cpp  dos_programs.cpp  drive_cache.cpp  drive_fat.cpp  drive_iso.cpp  drive_local.cpp  drives.cpp  program_imgmount.cpp  program_mount.cpp  program_mount_common.cpp
src/gui/: render.cpp
src/hardware/: dbopl.cpp  hardware.cpp  iohandler.cpp  ipx.cpp  joystick.cpp  keyboard.cpp  mixer.cpp  ne2000.cpp  vga_other.cpp
src/hardware/parport/: parport.cpp
src/hardware/serialport/: misc_util.h
src/ints/: bios.cpp  bios_keyboard.cpp
src/libs/decoders/: SDL_sound.c  SDL_sound.h  SDL_sound_internal.h  mp3_seek_table.h  stb_vorbis.h
src/midi/: midi.cpp
src/misc/: messages.cpp  support.cpp
src/shell/: shell.cpp  shell_batch.cpp  shell_cmds.cpp  shell_misc.cpp
validation/: consistency-check.sh  gate0-check.sh  link-test.sh  run-all-gates.sh
validation/lifecycle-test/: CMakeLists.txt  README.md
validation/performance-test/: CMakeLists.txt  README.md  performance-test.cpp
validation/smoke-test/: CMakeLists-lifecycle.txt  CMakeLists.txt  README.md  build-lifecycle-test.sh  lifecycle-smoke-test  lifecycle-smoke-test.cpp
(+54 files in other folders)
